--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -25,8 +25,15 @@
     cursor: pointer;
 }
 
+.sidebar-option.active {
+    background-color: #fff0ed;
+    border-color: tomato;
+}
+
+
+
 @media(max-width:900px) {
-    .sidebar-option {
+    .sidebar-option p {
         display: none;
     }
 }
