add functionality for the add item and remove for the list

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,13 @@ hr {
   display: flex;
 
 }
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.cursor {
+  cursor: pointer;
+}
